# repotool

./: CLAUDE.md  Cargo.toml  git-repo-checker.user.js  hugging-repo-checker.user.js  repo-checker.user.js  repotool.service
src/: archive.rs  clone.rs  fetch.rs  fsck.rs  git_url.rs  grab.rs  hash.rs  main.rs  scan.rs  serve.rs
