[package]
name = "repotool"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
log = "0.4"
octocrab = "0.38"
pretty_env_logger = "0.5"
tokio = { version = "1.38", features = ["rt-multi-thread"] }
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
infer = "0.19"
rayon = "1.11"
walkdir = "2.5"
base16ct = { version = "0.3", features = ["alloc"] }
tiny_http = "0.12"
sha2 = "0.10"
indicatif = { version = "0.18", features = ["rayon"] }

[dev-dependencies]
rstest = "0.26"
